# BPM_Offset_Detector

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md
examples/: main.cpp  main_old.cpp
include/: OffsetDetector.h  OnsetDetectorFFT.h  Polyfit.h  TempoDetector.h  load_audio.h  tempo_estimator_b.h
src/: OffsetDetector.cpp  OnsetDetectorFFT.cpp  load_audio.cpp  miniaudio_impl.cpp  tempo_estimator_b.cpp
tests/: test_integration.cpp  test_unit.cpp
